# rudanmaku-shell

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: container.rs  event.rs  main.rs
src-tauri/webapp/rudanmakuki/: index.html  package.toml  smui.css
src-tauri/webapp/rudanmakuki/assets/: index.46b7aa0c.js  index.ef8ee1c3.css
src/lib/: Console.svelte  CoreConfig.svelte  DraggableFab.svelte  Splashscreen.svelte  WebappItem.svelte
src/model/: core-config.ts  webapp-pkg.ts
src/tabpages/: CoreConsole.svelte  Webapp.svelte
src/theme/: _smui-theme.scss
src/webapp-container/: App.svelte
src/webapp-lock/: App.svelte
webapp-container/: index.html
webapp-lock/: index.html
