[package]
name = "rudanmaku-shell"
version = "0.1.0-beta"
description = "A Tauri App"
authors = ["4t145"]
license = ""
repository = ""
default-run = "rudanmaku-shell"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all", "process-command-api"] }
portpicker = "0.1.1"

[dependencies.tokio]
version = "1.18.2"
features = ["full"]

[dependencies.windows]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

